--- a/src/components/IntroScreen.css
+++ b/src/components/IntroScreen.css
@@ -56,11 +56,11 @@
 }
 
 .intro-text p {
-  font-size: 13px;
+  font-size: 12px;
   color: rgba(28, 28, 28, 1);
   font-weight: 500;
   margin: 0 0 0.6rem;
-  line-height: 1.5;
+  line-height: 18px;
   text-align: center;
 }
 
